--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,10 @@
+=== Git
+
+* 1 major enhancements
+
+  * Upgraded to Cucumber > 0.3.x (Kosmas Schütz)
+  * Use language specified in feature files (Kosmas Schütz)
+
 === 0.3.1 / 2009-06-12
 
 The Kosmas Schütz Release.
